--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <title>gardeningApp</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <base href="/">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
